--- a/MCM2021 LaTeX paper/masterbib.bib
+++ b/MCM2021 LaTeX paper/masterbib.bib
@@ -738,6 +738,33 @@ abstract = { A mathematical model that reproduces fungal proliferation and morph
 	Bdsk-Url-2 = {https://doi.org/10.1074/jbc.M114.604264}
 }
 
+@article{Panawala2017,
+	author = {Panawala, Lakna},
+	year = {2017},
+	month = {02},
+	pages = {},
+	title = {Difference Between Prokaryotic and Eukaryotic Cells}
+}
+
+@article{Kakde2009,
+	author = {KAKDE, UMESH},
+	year = {2009},
+	month = {05},
+	pages = {77-81},
+	title = {STUDIES ON FUNGI RESPONSIBLE FOR BIODEGRADATION AND HUMIFICATION OF ORGANIC MATTER},
+	volume = {2},
+	journal = {Bionano Frontier}
+}
+
+@article{Lodge1993,
+	author = {Lodge, Deborah},
+	year = {1993},
+	month = {01},
+	pages = {},
+	title = {Nutrient cycling by fungi in wet tropical forests},
+	journal = {Aspects of tropical mycology. Symposium, Liverpool, 1992}
+}
+
 @book{Holdridge1947,
 	title={Determination of world plant formations from simple climatic data},
 	author={Holdridge, LR.},
